# ssm-rotation-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.py
python2/: demo.py
python2/db/: dynamic_secret_rotation_db_conn.py
python2/ssm/: __init__.py  requester.py
python3/: demo.py
python3/db/: dynamic_secret_rotation_db_conn.py
python3/ssm/: requester.py
src/ssm_rotation_sdk/: __init__.py  db.py  requester.py
tests/: test_basic.py
